fixed all the endpoint problems, and the database connection issue

--- a/BaseCureAPI/BaseCureAPI/appsettings.json
+++ b/BaseCureAPI/BaseCureAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataBase": "Server=localhost;Database=p2324;Trusted_Connection=true;User ID=p2324;Password=Mostar2019;MultipleActiveResultSets=true"
+    "DataBase": "Data Source=DESKTOP-Q0I34LS;Initial Catalog=Basecure;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
