Finished login on frontend

--- a/BaseCureAPI/BaseCureAPI/appsettings.json
+++ b/BaseCureAPI/BaseCureAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataBase": "Data Source=DESKTOP-Q0I34LS;Initial Catalog=Basecure;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DataBase": "Data Source=localhost;Initial Catalog=Basecure;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
