--- a/BaseCureAPI/BaseCureAPI/BaseCureAPI.csproj
+++ b/BaseCureAPI/BaseCureAPI/BaseCureAPI.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+    <PackageReference Include="SendGrid" Version="9.29.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
