Organized endpoints on backend

--- a/BaseCureAPI/BaseCureAPI/appsettings.json
+++ b/BaseCureAPI/BaseCureAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataBase": "Data Source=DESKTOP-Q0I34LS;Initial Catalog=Basecure;Persist Security Info=True;User ID=sa;Password=admin;Encrypt=False;Trust Server Certificate=True"
+    "DataBase": "Server=localhost;Database=Basecure;Trusted_Connection=true;User ID=;Password=;MultipleActiveResultSets=true"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
