--- a/BaseCureAPI/BaseCureAPI/Properties/launchSettings.json
+++ b/BaseCureAPI/BaseCureAPI/Properties/launchSettings.json
@@ -17,6 +17,16 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7174;http://localhost:5174"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:7174/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7174;http://localhost:5174"
+      },
+      "distributionName": ""
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
