Fixed authorisation so it works on jwt tokens

--- a/BaseCureAPI/BaseCureAPI/appsettings.json
+++ b/BaseCureAPI/BaseCureAPI/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DataBase": "Server=localhost;Database=Basecure;Trusted_Connection=true;User ID=;Password=;MultipleActiveResultSets=true"
   },
+  "AuthOptions": {
+    "Secret": "AuthenticatonIDKLmao",
+    "ExpirationMinutes": 60
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
